--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -107,9 +107,11 @@
   text-align: center;
   margin-bottom: 0;
   padding: 1rem;
+  text-transform: uppercase;
 }
 
 .copy-msg p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 100;
+  opacity: 0.8;
 }
